list api methods now accepting query params only
